--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,14 @@ main {
   padding: 10px; 
 }
 
+.new {
+  background-color: rgba(248, 250, 249, 0.947);
+  margin-top: 3%;
+  margin-left: 3%;
+  margin-right: 3%; 
+  border-radius: 3px;
+}
+
 .posts {
   margin-top: 3%;
   margin-left: 9%;
